<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/customization_title">

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="@string/switch_theme_key"
            android:title="@string/theme_title"
            app:icon="@drawable/ic_brightness_3_24dp" />

        <!--<DropDownPreference
            android:entries="@array/language_array"
            android:entryValues="@array/language_array_values"
            android:key="@string/drop_down_language_key"
            android:title="@string/select_language_title"
            app:icon="@drawable/ic_language_24dp" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/units_system_title">
        <DropDownPreference
            android:entries="@array/units_array"
            android:entryValues="@array/units_array_values"
            android:key="@string/drop_down_units_key"
            android:title="@string/select_units_system_title"
            app:icon="@drawable/ic_info_outline_24dp" />
    </PreferenceCategory>

</PreferenceScreen>
