<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/introTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:singleLine="false"
        android:text="@string/intro_tv"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/clearButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="215dp"
                android:text="@string/clear_button"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/colorAccent"
                tools:ignore="MissingPrefix" />

            <Button
                android:id="@+id/calculateButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="216dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:text="@string/calculate_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/design_default_color_primary"
                tools:ignore="MissingPrefix"
                tools:targetApi="lollipop" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginBottom="52dp"
                android:text="@string/eccentricity_tv"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/editText3"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@id/editText2" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_et"
                android:inputType="number|numberDecimal"
                android:text="@string/value_et"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout_editor_absoluteY="23dp"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_et"
                android:inputType="number|numberDecimal"
                android:text="@string/value_et"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:hint="@string/hint_et"
                android:inputType="number|numberDecimal"
                android:text="@string/value_et"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                tools:targetApi="o" />

            <ImageView
                android:id="@+id/columnImageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="183dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/rectangle_shape"
                android:contentDescription="@string/column_image_content"
                android:elevation="4dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/img_column_pinned_pinned"
                tools:targetApi="lollipop" />


            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="@id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/end_condition_tv"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/material_tv"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/spinner2"
                app:layout_constraintStart_toStartOf="@id/spinner1"
                app:layout_constraintTop_toBottomOf="@+id/spinner1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cross_section_tv"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/spinner2"
                app:layout_constraintTop_toBottomOf="@id/spinner2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/length_tv"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/columnImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/load_tv"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/editText2"
                app:layout_constraintStart_toStartOf="@+id/editText1"
                app:layout_constraintTop_toBottomOf="@id/editText1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultsView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>